--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="box">
                         <div>
                             <div class="img-box">
-                                <img src="images/fish_finger.png" alt="Fish Finger">
+                                <img src="menuimages/Fish Finger.jpg" alt="Fish Finger">
                             </div>
                             <div class="detail-box">
                                 <h5 class="product__title">
@@ -232,7 +232,7 @@
                     <div class="box">
                         <div>
                             <div class="img-box">
-                                <img src="images/fish_biscuit.png" alt="Fish Biscuit">
+                                <img src="menuimages/Fish Biscuit.jpg" alt="Fish Biscuit">
                             </div>
                             <div class="detail-box">
                                 <h5 class="product__title">
@@ -271,7 +271,7 @@
                     <div class="box">
                         <div>
                             <div class="img-box">
-                                <img src="images/broasted_sole_fillets.png" alt="Broasted Sole Fillets">
+                                <img src="menuimages/Broasted Sole Fillets .jpg" alt="Broasted Sole Fillets">
                             </div>
                             <div class="detail-box">
                                 <h5 class="product__title">
@@ -307,7 +307,7 @@
                     <div class="box">
                         <div>
                             <div class="img-box">
-                                <img src="images/fish_chapli_kabab.png" alt="Fish Chapli Kabab">
+                                <img src="menuimages/Fish Chapli Kabab.jpg" alt="Fish Chapli Kabab">
                             </div>
                             <div class="detail-box">
                                 <h5 class="product__title">
@@ -345,7 +345,7 @@
                     <div class="box">
                         <div>
                             <div class="img-box">
-                                <img src="images/fish_o_fillet_burger.png" alt="Fish O Fillet Burger">
+                                <img src="menuimages/Fish O Fillet Burger.jpg" alt="Fish O Fillet Burger">
                             </div>
                             <div class="detail-box">
                                 <h5 class="product__title">
@@ -382,7 +382,7 @@
                     <div class="box">
                         <div>
                             <div class="img-box">
-                                <img src="images/pop_corn_shrimps.png" alt="Pop Corn Shrimps">
+                                <img src="menuimages/Pop Corn Shrimps.jpg" alt="Pop Corn Shrimps">
                             </div>
                             <div class="detail-box">
                                 <h5 class="product__title">
@@ -419,7 +419,7 @@
                     <div class="box">
                         <div>
                             <div class="img-box">
-                                <img src="images/prawn_tempura_large.png" alt="Prawn Tempura (Large)">
+                                <img src="menuimages/Raw Cleaned Prawns.jpg" alt="Prawn Tempura (Large)">
                             </div>
                             <div class="detail-box">
                                 <h5 class="product__title">
@@ -457,7 +457,7 @@
                     <div class="box">
                         <div>
                             <div class="img-box">
-                                <img src="images/tiger_prawns_tempura_king.png" alt="Tiger Prawns Tempura (King)">
+                                <img src="menuimages/Tiger Prawns Tempura.jpg" alt="Tiger Prawns Tempura (King)">
                             </div>
                             <div class="detail-box">
                                 <h5 class="product__title">
@@ -495,7 +495,7 @@
                     <div class="box">
                         <div>
                             <div class="img-box">
-                                <img src="images/raw_cleaned_prawns_iqf.png" alt="Raw Cleaned Prawns IQF">
+                                <img src="menuimages/Raw Cleaned Prawns.jpg" alt="Raw Cleaned Prawns IQF">
                             </div>
                             <div class="detail-box">
                                 <h5 class="product__title">
@@ -533,7 +533,7 @@
                     <div class="box">
                         <div>
                             <div class="img-box">
-                                <img src="images/raw_cleaned_prawns_iqf.png" alt="Raw Cleaned Prawns IQF">
+                                <img src="menuimages/Raw Cleaned Prawns.jpg" alt="Raw Cleaned Prawns IQF">
                             </div>
                             <div class="detail-box">
                                 <h5 class="product__title">
@@ -571,7 +571,7 @@
                     <div class="box">
                         <div>
                             <div class="img-box">
-                                <img src="images/raw_cleaned_prawns_iqf.png" alt="Raw Cleaned Prawns IQF">
+                                <img src="menuimages/Raw Cleaned Prawns.jpg" alt="Raw Cleaned Prawns IQF">
                             </div>
                             <div class="detail-box">
                                 <h5 class="product__title">
